# testAudioDivider

./: CMakeLists.txt
AudioDefaultSwitcher/: config
AudioDivider/: config
AudioDivider/AudioDivider/: AudioDivider.sln
AudioDivider/AudioDivider/AudioDivider/: AudioDivider.cs  AudioDivider.csproj  AutoControl.Designer.cs  AutoControl.cs  Communication.cs  Logging.cs  Main.cs  ProgramInfo.cs  SoundHandler.cs
AudioDivider/Helper/: Helper.sln
AudioDivider/Helper/Helper/: Helper.vcxproj  main.cpp
AudioDivider/SoundHook/: SoundHook.sln
AudioDivider/SoundHook/SoundHook/: PipeClient.cpp  SoundHook.vcxproj  main.cpp
AudioDivider/adcpp/: AudioDivider.FormAudioDivider.cpp  AudioDivider.FormAudioDivider.h  AudioDivider.FormAutoControl.cpp  AudioDivider.FormAutoControl.h  AutoInjectHandler.cpp  AutoInjectHandler.h  Communication.cpp  Communication.h  Configuration.cpp  Configuration.h  IniConfiguration.cpp  IniConfiguration.h  Inject.cpp  Inject.h  Logging.cpp  Logging.h  Main.cpp  Main.h  Native.cpp  Native.h  ProgramAutoInfo.cpp  ProgramAutoInfo.h  ProgramInfo.cpp  ProgramInfo.h  Security.cpp  Security.h  SoundHandler.cpp  SoundHandler.h  StringExtensions.cpp  StringExtensions.h  exceptionhelper.h  stringbuilder.h  tangible_filesystem.h
AudioDivider/adcpp/Properties/: AssemblyInfo.h
AudioDivider/adcpp/WASAPI/: EnumsAndStructs.cpp  EnumsAndStructs.h  Interfaces.cpp  Interfaces.h
AudioEndPointController-master/EndPointController/: EndPointController.cpp  EndPointController.vcxproj
DefaultAudioChanger-02080d91ed2fc3514358b80f793b66fe86a7fc9c/DefaultAudioChanger/: AboutDlg.cpp  DefaultAudioChanger.cpp  DefaultAudioChanger.vcxproj  DevicesManager.cpp  stdafx.cpp
LeakyMediaControls/: config
NamedPipe/NamedpipeSlient/: NamedpipeSlient.sln
NamedPipe/NamedpipeSlient/NamedpipeSlient/: Client.cpp  NamedpipeSlient.vcxproj  NamedpipeSlient.vcxproj.filters
NamedPipe/Namedpipe_Server/: Namedpipe_Server.sln
NamedPipe/Namedpipe_Server/Namedpipe_Server/: Namedpipe_Server.vcxproj  server.cpp
docs/: GetProcessAddress.md  createNamedPipe.md  createRemoteThread.md
inject/InjectDll_and_creatremo/InjectDll/: InjectDll.sln
inject/InjectDll_and_creatremo/InjectDll/InjectDll/: InjectDll.cpp  InjectDll.def  InjectDll.vcxproj  InjectDll.vcxproj.filters  (+2 more)
inject/InjectDll_and_creatremo/createremotethread/: createremotethread.sln
mp3player-master/MP3/: MP3.rc  MP3.vcxproj
(+5 files in other folders)
